# RagNeuron

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-legacy.bat  run-legacy.sh  run.bat  run.sh
scripts/: export_data.py  prepare_data.py
src/: config.py  ingest.py  main.py  rag.py
