[project]
name = "ragneuron"
version = "0.1.0"
description = "RAG system for technical support with BGE-M3 embeddings and Qdrant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "mysql-connector-python>=9.3.0",
    "fastapi>=0.136.3",
    "flagembedding>=1.4.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.48.0",
]
